// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Project/Import render delete file 1`] = `
<body>
  <div>
    <div
      class="css-1k6w0v5"
    >
      <div
        class="actiontech-page-header-namespace fixed-style css-1xspr0w"
      >
        <div
          class="title"
        >
          <a
            href="/project"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span>
                返回项目列表
              </span>
            </button>
          </a>
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              导 入
            </span>
          </button>
        </div>
      </div>
      <section
        class="fix-header-padding css-bspaai"
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopHeader css-19jfn7e"
        >
          <h3
            class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="anticon title-icon"
              role="img"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 18 18"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.38515 0.981863L15.9634 4.92836C16.019 4.96166 16.065 5.0088 16.097 5.06519C16.129 5.12158 16.1458 5.18529 16.1458 5.25011C16.1458 5.31493 16.129 5.37865 16.097 5.43504C16.065 5.49143 16.019 5.53857 15.9634 5.57186L8.99965 9.75011L2.0359 5.57186C1.98028 5.53857 1.93425 5.49143 1.90228 5.43504C1.87032 5.37865 1.85352 5.31493 1.85352 5.25011C1.85352 5.18529 1.87032 5.12158 1.90228 5.06519C1.93425 5.0088 1.98028 4.96166 2.0359 4.92836L8.6134 0.981863C8.73004 0.911781 8.86356 0.874756 8.99965 0.874756C9.13573 0.874756 9.2685 0.911781 9.38515 0.981863Z"
                  fill="#C3C6CD"
                />
                <path
                  d="M15.0619 7.875L15.9634 8.41575C16.019 8.44904 16.065 8.49619 16.097 8.55258C16.129 8.60897 16.1458 8.67268 16.1458 8.7375C16.1458 8.80232 16.129 8.86603 16.097 8.92242C16.065 8.97881 16.019 9.02596 15.9634 9.05925L8.99965 13.2375L2.0359 9.05925C1.98028 9.02596 1.93425 8.97881 1.90228 8.92242C1.87032 8.86603 1.85352 8.80232 1.85352 8.7375C1.85352 8.67268 1.87032 8.60897 1.90228 8.55258C1.93425 8.49619 1.98028 8.44904 2.0359 8.41575L2.9374 7.875L8.99965 11.5125L15.0619 7.875ZM15.0619 11.4L15.9634 11.9407C16.019 11.974 16.065 12.0212 16.097 12.0776C16.129 12.134 16.1458 12.1977 16.1458 12.2625C16.1458 12.3273 16.129 12.391 16.097 12.4474C16.065 12.5038 16.019 12.551 15.9634 12.5842L9.3859 16.5307C9.26925 16.6008 9.13573 16.6379 8.99965 16.6379C8.86356 16.6379 8.73005 16.6008 8.6134 16.5307L2.0359 12.5842C1.98028 12.551 1.93425 12.5038 1.90228 12.4474C1.87032 12.391 1.85352 12.3273 1.85352 12.2625C1.85352 12.1977 1.87032 12.134 1.90228 12.0776C1.93425 12.0212 1.98028 11.974 2.0359 11.9407L2.9374 11.4L8.99965 15.0375L15.0619 11.4Z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
            <span>
              导入项目及业务
            </span>
          </h3>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="projectFile"
                  title="请选择导入文件"
                >
                  请选择导入文件
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="css-18zq7vp"
                    >
                      <span
                        class="ant-upload-wrapper css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-upload ant-upload-select"
                        >
                          <span
                            class="ant-upload"
                            role="button"
                            tabindex="0"
                          >
                            <input
                              accept=".csv"
                              aria-required="true"
                              id="projectFile"
                              style="display: none;"
                              type="file"
                            />
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                选择文件上传
                              </span>
                            </button>
                          </span>
                        </div>
                        <div
                          class="ant-upload-list ant-upload-list-text"
                        >
                          <div
                            class="ant-upload-list-item-container"
                          >
                            <div
                              class="ant-upload-list-item ant-upload-list-item-uploading"
                            >
                              <div
                                class="ant-upload-icon"
                              >
                                <span
                                  aria-label="loading"
                                  class="anticon anticon-loading anticon-spin"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="loading"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <span
                                class="ant-upload-list-item-name"
                                title="test.csv"
                              >
                                test.csv
                              </span>
                              <span
                                class="ant-upload-list-item-actions"
                              >
                                <button
                                  class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                  title="Remove file"
                                  type="button"
                                >
                                  <span
                                    class="ant-btn-icon"
                                  >
                                    <span
                                      aria-label="delete"
                                      class="anticon anticon-delete"
                                      role="img"
                                      tabindex="-1"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="delete"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </button>
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                      <button
                        class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-link"
                        type="button"
                      >
                        <span>
                          下载导入模板
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`base/Project/Import render return to list page 1`] = `
<body>
  <div>
    <div
      class="css-1k6w0v5"
    >
      <div
        class="actiontech-page-header-namespace fixed-style css-1xspr0w"
      >
        <div
          class="title"
        >
          <a
            href="/project"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span>
                返回项目列表
              </span>
            </button>
          </a>
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              导 入
            </span>
          </button>
        </div>
      </div>
      <section
        class="fix-header-padding css-bspaai"
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopHeader css-19jfn7e"
        >
          <h3
            class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="anticon title-icon"
              role="img"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 18 18"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.38515 0.981863L15.9634 4.92836C16.019 4.96166 16.065 5.0088 16.097 5.06519C16.129 5.12158 16.1458 5.18529 16.1458 5.25011C16.1458 5.31493 16.129 5.37865 16.097 5.43504C16.065 5.49143 16.019 5.53857 15.9634 5.57186L8.99965 9.75011L2.0359 5.57186C1.98028 5.53857 1.93425 5.49143 1.90228 5.43504C1.87032 5.37865 1.85352 5.31493 1.85352 5.25011C1.85352 5.18529 1.87032 5.12158 1.90228 5.06519C1.93425 5.0088 1.98028 4.96166 2.0359 4.92836L8.6134 0.981863C8.73004 0.911781 8.86356 0.874756 8.99965 0.874756C9.13573 0.874756 9.2685 0.911781 9.38515 0.981863Z"
                  fill="#C3C6CD"
                />
                <path
                  d="M15.0619 7.875L15.9634 8.41575C16.019 8.44904 16.065 8.49619 16.097 8.55258C16.129 8.60897 16.1458 8.67268 16.1458 8.7375C16.1458 8.80232 16.129 8.86603 16.097 8.92242C16.065 8.97881 16.019 9.02596 15.9634 9.05925L8.99965 13.2375L2.0359 9.05925C1.98028 9.02596 1.93425 8.97881 1.90228 8.92242C1.87032 8.86603 1.85352 8.80232 1.85352 8.7375C1.85352 8.67268 1.87032 8.60897 1.90228 8.55258C1.93425 8.49619 1.98028 8.44904 2.0359 8.41575L2.9374 7.875L8.99965 11.5125L15.0619 7.875ZM15.0619 11.4L15.9634 11.9407C16.019 11.974 16.065 12.0212 16.097 12.0776C16.129 12.134 16.1458 12.1977 16.1458 12.2625C16.1458 12.3273 16.129 12.391 16.097 12.4474C16.065 12.5038 16.019 12.551 15.9634 12.5842L9.3859 16.5307C9.26925 16.6008 9.13573 16.6379 8.99965 16.6379C8.86356 16.6379 8.73005 16.6008 8.6134 16.5307L2.0359 12.5842C1.98028 12.551 1.93425 12.5038 1.90228 12.4474C1.87032 12.391 1.85352 12.3273 1.85352 12.2625C1.85352 12.1977 1.87032 12.134 1.90228 12.0776C1.93425 12.0212 1.98028 11.974 2.0359 11.9407L2.9374 11.4L8.99965 15.0375L15.0619 11.4Z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
            <span>
              导入项目及业务
            </span>
          </h3>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="projectFile"
                  title="请选择导入文件"
                >
                  请选择导入文件
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="css-18zq7vp"
                    >
                      <span
                        class="ant-upload-wrapper css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-upload ant-upload-select"
                        >
                          <span
                            class="ant-upload"
                            role="button"
                            tabindex="0"
                          >
                            <input
                              accept=".csv"
                              aria-required="true"
                              id="projectFile"
                              style="display: none;"
                              type="file"
                            />
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                选择文件上传
                              </span>
                            </button>
                          </span>
                        </div>
                        <div
                          class="ant-upload-list ant-upload-list-text"
                        />
                      </span>
                      <button
                        class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-link"
                        type="button"
                      >
                        <span>
                          下载导入模板
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`base/Project/Import render upload file 1`] = `
<body>
  <div>
    <div
      class="css-1k6w0v5"
    >
      <div
        class="actiontech-page-header-namespace fixed-style css-1xspr0w"
      >
        <div
          class="title"
        >
          <a
            href="/project"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span>
                返回项目列表
              </span>
            </button>
          </a>
        </div>
        <div
          class="extra"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
            type="button"
          >
            <span>
              导 入
            </span>
          </button>
        </div>
      </div>
      <section
        class="fix-header-padding css-bspaai"
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopHeader css-19jfn7e"
        >
          <h3
            class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="anticon title-icon"
              role="img"
            >
              <svg
                fill="none"
                height="32"
                viewBox="0 0 18 18"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.38515 0.981863L15.9634 4.92836C16.019 4.96166 16.065 5.0088 16.097 5.06519C16.129 5.12158 16.1458 5.18529 16.1458 5.25011C16.1458 5.31493 16.129 5.37865 16.097 5.43504C16.065 5.49143 16.019 5.53857 15.9634 5.57186L8.99965 9.75011L2.0359 5.57186C1.98028 5.53857 1.93425 5.49143 1.90228 5.43504C1.87032 5.37865 1.85352 5.31493 1.85352 5.25011C1.85352 5.18529 1.87032 5.12158 1.90228 5.06519C1.93425 5.0088 1.98028 4.96166 2.0359 4.92836L8.6134 0.981863C8.73004 0.911781 8.86356 0.874756 8.99965 0.874756C9.13573 0.874756 9.2685 0.911781 9.38515 0.981863Z"
                  fill="#C3C6CD"
                />
                <path
                  d="M15.0619 7.875L15.9634 8.41575C16.019 8.44904 16.065 8.49619 16.097 8.55258C16.129 8.60897 16.1458 8.67268 16.1458 8.7375C16.1458 8.80232 16.129 8.86603 16.097 8.92242C16.065 8.97881 16.019 9.02596 15.9634 9.05925L8.99965 13.2375L2.0359 9.05925C1.98028 9.02596 1.93425 8.97881 1.90228 8.92242C1.87032 8.86603 1.85352 8.80232 1.85352 8.7375C1.85352 8.67268 1.87032 8.60897 1.90228 8.55258C1.93425 8.49619 1.98028 8.44904 2.0359 8.41575L2.9374 7.875L8.99965 11.5125L15.0619 7.875ZM15.0619 11.4L15.9634 11.9407C16.019 11.974 16.065 12.0212 16.097 12.0776C16.129 12.134 16.1458 12.1977 16.1458 12.2625C16.1458 12.3273 16.129 12.391 16.097 12.4474C16.065 12.5038 16.019 12.551 15.9634 12.5842L9.3859 16.5307C9.26925 16.6008 9.13573 16.6379 8.99965 16.6379C8.86356 16.6379 8.73005 16.6008 8.6134 16.5307L2.0359 12.5842C1.98028 12.551 1.93425 12.5038 1.90228 12.4474C1.87032 12.391 1.85352 12.3273 1.85352 12.2625C1.85352 12.1977 1.87032 12.134 1.90228 12.0776C1.93425 12.0212 1.98028 11.974 2.0359 11.9407L2.9374 11.4L8.99965 15.0375L15.0619 11.4Z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
            <span>
              导入项目及业务
            </span>
          </h3>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="projectFile"
                  title="请选择导入文件"
                >
                  请选择导入文件
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="css-18zq7vp"
                    >
                      <span
                        class="ant-upload-wrapper css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-upload ant-upload-select"
                        >
                          <span
                            class="ant-upload"
                            role="button"
                            tabindex="0"
                          >
                            <input
                              accept=".csv"
                              aria-required="true"
                              id="projectFile"
                              style="display: none;"
                              type="file"
                            />
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                选择文件上传
                              </span>
                            </button>
                          </span>
                        </div>
                        <div
                          class="ant-upload-list ant-upload-list-text"
                        >
                          <div
                            class="ant-upload-list-item-container"
                          >
                            <div
                              class="ant-upload-list-item ant-upload-list-item-done"
                            >
                              <div
                                class="ant-upload-icon"
                              >
                                <span
                                  aria-label="paper-clip"
                                  class="anticon anticon-paper-clip"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="paper-clip"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <span
                                class="ant-upload-list-item-name"
                                title="test.csv"
                              >
                                test.csv
                              </span>
                              <span
                                class="ant-upload-list-item-actions"
                              >
                                <button
                                  class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                  title="Remove file"
                                  type="button"
                                >
                                  <span
                                    class="ant-btn-icon"
                                  >
                                    <span
                                      aria-label="delete"
                                      class="anticon anticon-delete"
                                      role="img"
                                      tabindex="-1"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="delete"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </button>
                              </span>
                            </div>
                          </div>
                        </div>
                      </span>
                      <button
                        class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-link"
                        type="button"
                      >
                        <span>
                          下载导入模板
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-scroll-horizontal"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              项目
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              业务
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              project1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                  >
                                    business1
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                  >
                                    business2
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                  >
                                    business3
                                  </span>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="project2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              project2
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-f4phf8 css-dev-only-do-not-override-bj9uhl"
                                  >
                                    business1
                                  </span>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key=""
                          >
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`base/Project/Import render upload file 2`] = `
<body>
  <div>
    <div
      class="css-1k6w0v5"
    >
      <div
        class="actiontech-page-header-namespace fixed-style css-1xspr0w"
      >
        <div
          class="title"
        >
          <a
            href="/project"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span>
                返回项目列表
              </span>
            </button>
          </a>
        </div>
        <div
          class="extra"
        />
      </div>
      <section
        class="basic-result-wrapper css-7vto1s"
      >
        <div
          class="ant-result ant-result-info css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-result-icon"
          >
            <svg
              fill="none"
              height="160"
              viewBox="0 0 160 160"
              width="160"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                filter="url(#filter0_d_3998_2816)"
              >
                <rect
                  fill="white"
                  height="100"
                  rx="6"
                  width="128"
                  x="15"
                  y="30"
                />
                <rect
                  height="99"
                  rx="5.5"
                  stroke="#F2F1F0"
                  width="127"
                  x="15.5"
                  y="30.5"
                />
              </g>
              <circle
                cx="21.5"
                cy="36.5"
                fill="#F66074"
                r="1.5"
              />
              <circle
                cx="27.5"
                cy="36.5"
                fill="#EDB054"
                r="1.5"
              />
              <circle
                cx="33.5"
                cy="36.5"
                fill="#1CB889"
                r="1.5"
              />
              <rect
                fill="#EBEAE7"
                height="5"
                rx="2"
                width="37"
                x="27"
                y="52"
              />
              <rect
                fill="#EBEAE7"
                height="4"
                rx="2"
                width="17"
                x="27"
                y="62"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="19"
                x="70"
                y="78"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="40"
                x="27"
                y="78"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="47"
                x="42"
                y="87"
              />
              <rect
                fill="#F66074"
                height="4"
                rx="2"
                width="12"
                x="27"
                y="87"
              />
              <rect
                fill="#F66074"
                height="4"
                rx="2"
                width="10"
                x="79"
                y="96"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="13"
                x="63"
                y="96"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="33"
                x="27"
                y="96"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="34"
                x="55"
                y="105"
              />
              <rect
                fill="#F66074"
                height="4"
                rx="2"
                width="25"
                x="27"
                y="105"
              />
              <rect
                fill="#F2F1EF"
                height="4"
                rx="2"
                width="49"
                x="27"
                y="114"
              />
              <rect
                fill="#F7F6F4"
                height="72"
                rx="3"
                width="32"
                x="99"
                y="48"
              />
              <rect
                fill="white"
                height="6"
                rx="1"
                stroke="#E8E7E6"
                width="24"
                x="103"
                y="52"
              />
              <rect
                fill="white"
                height="6"
                rx="1"
                stroke="#E8E7E6"
                width="24"
                x="103"
                y="76"
              />
              <g
                filter="url(#filter1_d_3998_2816)"
              >
                <rect
                  fill="#4583FF"
                  height="8"
                  rx="2"
                  width="26"
                  x="102"
                  y="63"
                />
              </g>
              <rect
                fill="white"
                height="6"
                rx="1"
                stroke="#E8E7E6"
                width="24"
                x="103"
                y="87"
              />
              <rect
                fill="white"
                height="6"
                rx="1"
                stroke="#E8E7E6"
                width="24"
                x="103"
                y="98"
              />
              <rect
                fill="white"
                height="6"
                rx="1"
                stroke="#E8E7E6"
                width="24"
                x="103"
                y="109"
              />
              <g
                filter="url(#filter2_d_3998_2816)"
              >
                <path
                  d="M134 136C138.418 136 142.418 134.209 145.314 131.314C148.209 128.418 150 124.418 150 120C150 115.582 148.209 111.582 145.314 108.686C142.418 105.791 138.418 104 134 104C129.582 104 125.582 105.791 122.686 108.686C119.791 111.582 118 115.582 118 120C118 124.418 119.791 128.418 122.686 131.314C125.582 134.209 129.582 136 134 136Z"
                  fill="#1CB889"
                />
              </g>
              <path
                d="M128.4 120L132.6 124.2L141 115.8"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="3"
              />
              <rect
                fill="url(#paint0_linear_3998_2816)"
                height="50"
                width="37"
                x="27"
                y="73"
              />
              <rect
                fill="#15C7D4"
                height="50"
                width="2"
                x="62"
                y="73"
              />
              <defs>
                <filter
                  color-interpolation-filters="sRGB"
                  filterUnits="userSpaceOnUse"
                  height="110"
                  id="filter0_d_3998_2816"
                  width="138"
                  x="10"
                  y="27"
                >
                  <feflood
                    flood-opacity="0"
                    result="BackgroundImageFix"
                  />
                  <fecolormatrix
                    in="SourceAlpha"
                    result="hardAlpha"
                    type="matrix"
                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                  />
                  <feoffset
                    dy="2"
                  />
                  <fegaussianblur
                    stdDeviation="2.5"
                  />
                  <fecomposite
                    in2="hardAlpha"
                    operator="out"
                  />
                  <fecolormatrix
                    type="matrix"
                    values="0 0 0 0 0.2 0 0 0 0 0.173333 0 0 0 0 0.12 0 0 0 0.1 0"
                  />
                  <feblend
                    in2="BackgroundImageFix"
                    mode="normal"
                    result="effect1_dropShadow_3998_2816"
                  />
                  <feblend
                    in="SourceGraphic"
                    in2="effect1_dropShadow_3998_2816"
                    mode="normal"
                    result="shape"
                  />
                </filter>
                <filter
                  color-interpolation-filters="sRGB"
                  filterUnits="userSpaceOnUse"
                  height="16"
                  id="filter1_d_3998_2816"
                  width="34"
                  x="98"
                  y="60"
                >
                  <feflood
                    flood-opacity="0"
                    result="BackgroundImageFix"
                  />
                  <fecolormatrix
                    in="SourceAlpha"
                    result="hardAlpha"
                    type="matrix"
                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                  />
                  <feoffset
                    dy="1"
                  />
                  <fegaussianblur
                    stdDeviation="2"
                  />
                  <fecomposite
                    in2="hardAlpha"
                    operator="out"
                  />
                  <fecolormatrix
                    type="matrix"
                    values="0 0 0 0 0.270588 0 0 0 0 0.513726 0 0 0 0 1 0 0 0 0.4 0"
                  />
                  <feblend
                    in2="BackgroundImageFix"
                    mode="normal"
                    result="effect1_dropShadow_3998_2816"
                  />
                  <feblend
                    in="SourceGraphic"
                    in2="effect1_dropShadow_3998_2816"
                    mode="normal"
                    result="shape"
                  />
                </filter>
                <filter
                  color-interpolation-filters="sRGB"
                  filterUnits="userSpaceOnUse"
                  height="44"
                  id="filter2_d_3998_2816"
                  width="44"
                  x="112"
                  y="100"
                >
                  <feflood
                    flood-opacity="0"
                    result="BackgroundImageFix"
                  />
                  <fecolormatrix
                    in="SourceAlpha"
                    result="hardAlpha"
                    type="matrix"
                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                  />
                  <feoffset
                    dy="2"
                  />
                  <fegaussianblur
                    stdDeviation="3"
                  />
                  <fecomposite
                    in2="hardAlpha"
                    operator="out"
                  />
                  <fecolormatrix
                    type="matrix"
                    values="0 0 0 0 0.109804 0 0 0 0 0.721569 0 0 0 0 0.537255 0 0 0 0.4 0"
                  />
                  <feblend
                    in2="BackgroundImageFix"
                    mode="normal"
                    result="effect1_dropShadow_3998_2816"
                  />
                  <feblend
                    in="SourceGraphic"
                    in2="effect1_dropShadow_3998_2816"
                    mode="normal"
                    result="shape"
                  />
                </filter>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="paint0_linear_3998_2816"
                  x1="64"
                  x2="27"
                  y1="73"
                  y2="73"
                >
                  <stop
                    stop-color="#1ACEDB"
                    stop-opacity="0.3"
                  />
                  <stop
                    offset="1"
                    stop-color="white"
                    stop-opacity="0"
                  />
                </lineargradient>
              </defs>
            </svg>
          </div>
          <div
            class="ant-result-title"
          >
            导入项目及业务成功
          </div>
          <div
            class="ant-result-subtitle"
          >
            <a
              href="/project"
            >
              到项目列表查看刚刚导入的项目
               
              &gt;
            </a>
          </div>
          <div
            class="ant-result-extra"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span>
                关闭并重置表单
              </span>
            </button>
          </div>
        </div>
      </section>
    </div>
  </div>
</body>
`;
